add questions and answers, and functionality to show each set of question and answers at a time

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <section id="question-page" status="hidden">
             <h1 id="question"></h1>
             <ul id="answer-choices">
-                <li class="choiceOne"></li>
-                <li class="choiceTwo"></li>
-                <li class="choiceThree"></li>
-                <li class="choiceFour"></li>
+                <li id="choice-a"></li>
+                <li id="choice-b"></li>
+                <li id="choice-c"></li>
+                <li id="choice-d"></li>
             </ul>
             <p id="prev-answer"></p>
         </section>
