change mechanism for showing questions and answers, add check answer functionality

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <!-- questions page-->
         <section id="question-page" status="hidden">
             <h1 id="question"></h1>
-            <ul id="answer-choices">
-                <li id="choice-a"></li>
+            <div id="answer-choices">
+                <!-- <li id="choice-a"></li>
                 <li id="choice-b"></li>
                 <li id="choice-c"></li>
-                <li id="choice-d"></li>
-            </ul>
+                <li id="choice-d"></li> -->
+            </div>
             <p id="prev-answer"></p>
         </section>
         <!-- game over page -->
@@ -44,6 +44,7 @@
                 <input type="text" name="initials" id="initials">
                 <button id="submit-score">Submit!</button>
             </form>
+            <button id="try-again">Try Again!</button>
         </section>
     </main>
     <script src="./assets/js/script.js"></script>
