--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <section id="start-quiz">
             <h1>JavaScript Quiz</h1>
             <p>
-                You have 100 seconds to answer 10 questions regarding JavaScript concepts. Any incorrect guesses will
-                detract 10 seconds from your remaining time. Good luck!
+                You have 60 seconds to answer 6 questions regarding JavaScript concepts. Earn 10 points for every correct answer. Any incorrect guesses will
+                detract 5 seconds from your remaining time. Good luck!
             </p>
             <button id="begin">BEGIN!</button>
         </section>
@@ -41,6 +41,7 @@
             <h1>Game Over!</h1>
             <form id="enter-score">
                 <p id="your-score"></p>
+                <label for="initials">Enter Initials</label>
                 <input type="text" name="initials" id="initials">
                 <button id="submit-score">Submit!</button>
             </form>
